# MIL-Lab

./: .gitignore  pyproject.toml
mil_lab/: _global_mappings.py  builder.py  builder_utils.py
mil_lab/builders/: ModelDict.py
mil_lab/components/: __init__.py  nystrom_attention.py
mil_lab/model_configs/abmil/: base.yaml
mil_lab/model_configs/clam/: base.yaml  base_ce.yaml  base_ce_subtyping.yaml  base_subtyping.yaml
mil_lab/model_configs/dftd/: base.yaml  base_afs.yaml
mil_lab/model_configs/dsmil/: base.yaml
mil_lab/model_configs/ilra/: base.yaml
mil_lab/model_configs/rrt/: base.yaml
mil_lab/model_configs/transformer/: base.yaml
mil_lab/model_configs/transmil/: base.yaml
mil_lab/model_configs/wikg/: base.yaml
mil_lab/models/: abmil.py  clam.py  dftd.py  dsmil.py  ilra.py  mil_template.py  rrt.py  transformer.py  transmil.py  wikg.py
