[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mil_lab" # for only my env
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9.0,<3.11" # This belongs under [project]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC BY-NC 4.0",
]
dynamic = ["dependencies"]

[project.scripts] # Scripts for Setuptools go under [project.scripts]
create_model = "mil_lab.builder:create_model"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
exclude = ["dev*", "temp*", "docs", "dist*", "scripts*", "tests*", "checkpoints*"]

[tool.setuptools.package-data]
mil_lab = ["model_configs/**/*.yaml"]

[tool.wheel]
exclude = ["dev*", "temp*", "docs", "dist*", "scripts*", "tests*", "checkpoints*"]


